<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="meqdad.darweesh.homy.ManageActivity">


    <ToggleButton
        android:id="@+id/allOfff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ggas"
        android:layout_below="@+id/buzzer3"
        android:text="ToggleButton"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="111dp" />

    <ToggleButton
        android:id="@+id/song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buzzer4"
        android:layout_below="@+id/buzzer4"
        android:text="ToggleButton"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="111dp" />

    <ToggleButton
        android:id="@+id/gasSensorToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ldrToggle"
        android:layout_below="@+id/ggas"
        android:text="ToggleButton"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="111dp" />

    <ToggleButton
        android:id="@+id/ldrToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/buzzerToggle"
        android:layout_below="@+id/textView"
        android:text="ToggleButton"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="111dp" />

    <ToggleButton
        android:id="@+id/greenToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/green"
        android:layout_below="@+id/green"
        android:text="ToggleButton"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="111dp" />

    <ToggleButton
        android:id="@+id/RGBToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/toggleMode"
        android:layout_below="@+id/toggleMode"
        android:text="ToggleButton"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="111dp" />

    <ToggleButton
        android:id="@+id/buzzerToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/doorToggle"
        android:layout_below="@+id/buzzer"
        android:text="ToggleButton"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="111dp" />

    <ToggleButton
        android:id="@+id/redToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/lampToggle"
        android:layout_below="@+id/red"
        android:text="ToggleButton"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="190dp" />

    <ToggleButton
        android:id="@+id/doorToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/green"
        android:layout_alignBottom="@+id/green"
        android:layout_alignEnd="@+id/component"
        android:text="ToggleButton"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="190dp" />

    <ToggleButton
        android:id="@+id/lampToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/lamp"
        android:layout_below="@+id/lamp"
        android:text="ToggleButton"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="343dp" />

    <TextView
        android:id="@+id/lights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/redToggle"
        android:layout_below="@+id/component"
        android:layout_marginTop="14dp"
        android:text="@string/lights"
        android:textSize="17sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="60dp" />

    <TextView
        android:id="@+id/buzzer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/blueToggle"
        android:layout_alignStart="@+id/door"
        android:text="@string/buzzer"
        android:textSize="17sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="60dp" />

    <TextView
        android:id="@+id/gasValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/song"
        android:layout_alignStart="@+id/RGBToggle"
        android:text="@string/lights"
        android:textSize="17sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="60dp" />

    <TextView
        android:id="@+id/buzzer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lampToggle"
        android:layout_alignEnd="@+id/buzzerToggle"
        android:text="@string/allOff"
        android:textSize="17sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="60dp" />

    <TextView
        android:id="@+id/buzzer4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/RGBToggle"
        android:layout_alignEnd="@+id/allOfff"
        android:text="@string/songMusic"
        android:textSize="17sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="60dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/redToggle"
        android:layout_alignStart="@+id/buzzer"
        android:text="@string/ldr"
        android:textSize="17sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="60dp" />

    <TextView
        android:id="@+id/ggas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/greenToggle"
        android:layout_alignEnd="@+id/gasSensorToggle"
        android:text="@string/gas"
        android:textSize="17sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="60dp" />

    <TextView
        android:id="@+id/door"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/doorToggle"
        android:layout_alignStart="@+id/ggas"
        android:layout_marginStart="22dp"
        android:text="@string/door"
        android:textSize="17sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="60dp" />

    <TextView
        android:id="@+id/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/lights"
        android:layout_below="@+id/lights"
        android:layout_marginTop="19dp"
        android:text="@string/rgbgreen"
        android:textColor="@color/green"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="92dp" />

    <TextView
        android:id="@+id/red"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_alignStart="@+id/greenToggle"
        android:layout_below="@+id/greenToggle"
        android:layout_marginTop="14dp"
        android:text="@string/rgbred"
        android:textColor="@color/red"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="171dp" />

    <TextView
        android:id="@+id/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/redToggle"
        android:layout_below="@+id/redToggle"
        android:layout_marginTop="12dp"
        android:text="@string/rgbblue"
        android:textColor="@color/blue"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="247dp" />

    <TextView
        android:id="@+id/toggleMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/lampToggle"
        android:layout_below="@+id/blue"
        android:layout_marginTop="139dp"
        android:text="@string/toggle"
        android:textColor="@color/pink"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="247dp" />

    <TextView
        android:id="@+id/lamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/blueToggle"
        android:layout_below="@+id/blueToggle"
        android:layout_marginTop="13dp"
        android:text="@string/lamp"
        android:textColor="@color/colorAccent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="324dp" />

    <ToggleButton
        android:id="@+id/blueToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/blue"
        android:layout_marginStart="25dp"
        android:text="ToggleButton"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="266dp" />

    <TextView
        android:id="@+id/component"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:text="@string/component"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</RelativeLayout>